<resources>
    <string name="app_name">WorldOfPlants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_orquideas">Orquideas</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="btn_text">Create Plant</string>
    <string name="cDesc_create_plant">Create Plant</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="orquidea_desc">Esta es la descripcion de una Orquidea, color rosa muy vivo y de tallo largo.</string>
    <string name="set_hour">Set Alarm</string>
    <string name="set">Set</string>
    <string name="_3_00_pm">3:00 pm</string>
    <string name="plants_pinner">plants pinner</string>
    <string name="alarms_spinner">alarms spinner</string>
    <string name="create">Create</string>
</resources>