<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <data>
        <variable
            name="viewmodel"
            type="com.example.worldofplants.ui.plant.viewmodel.PlantViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.plant.newplant.NewPlantFragment"
        android:background="@color/bg_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/wop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plantTf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="64dp"
                android:hint="@string/hint_name"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
                app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tf_bg_color"
                    android:text="@={viewmodel.name}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/hint_description"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/plantTf"
                app:layout_constraintStart_toStartOf="@+id/plantTf"
                app:layout_constraintTop_toBottomOf="@+id/plantTf">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D7FBE5"
                    android:text="@={viewmodel.description}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/btn_color"
                android:onClick="@{() -> viewmodel.createPlant()}"
                android:text="@string/btn_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/descriptionTf"
                app:layout_constraintStart_toStartOf="@+id/descriptionTf"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTf" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>